--- a/css/main.css
+++ b/css/main.css
@@ -34,13 +34,16 @@ header #top {
 }
 
 #learn {
-    width: 100%;
-    height: 706px;
     background-image: url('../assets/background.png');
     background-repeat: repeat;
 }
 
-#teach {
+#learn, #onlineSection, #groupSection {
+    width: 100%;
+    height: 706px;
+}
+
+#teach, #clubSection, #workshopsSection {
     width: 100%;
     height: 702px;
 }
@@ -146,19 +149,19 @@ main {
     color: white;
 }
 
-#online {
+#online, #onlineSection{
     background-color: #ef3d6c;
 }
 
-#group {
+#group, #groupSection {
     background-color: #ba5ca3;
 }
 
-#club {
+#club, #clubSection {
     background-color: #7cd23c;
 }
 
-#workshops {
+#workshops, #workshopsSection {
     background-color: #6a9fa7;
 }
 
