--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 
 header {
     width: 100%;
-    height: 99px;
+    height: 60px;
     background-color: #7bcc3f;
     position: fixed;
     z-index: 1;
@@ -25,6 +25,44 @@ header #top {
     width: 100%;
     height: 8px;
     background-color: #2a2a2a;
+}
+
+header #logo {
+    padding-top: 6px;
+    float: left;
+}
+
+header nav {
+    width: 400px;
+    float: right;
+    margin-top: 22px;
+}
+
+header nav ul {
+    list-style: none;
+    display: block;
+    margin: 0 auto;
+}
+
+header nav li {
+    float: left;
+    padding-left: 50px;
+}
+
+nav li a {
+    color: #2b2a27;
+    font-size: 16px;
+    text-decoration: none;
+    font-family: 'Arimo';
+}
+nav li a:active {
+    color: white;
+    border-bottom: 1px solid white;
+}
+
+nav li a:hover {
+    color: white;
+    border-bottom: 1px solid white;
 }
 
 #intro {
@@ -103,6 +141,12 @@ main {
     color: black;
     margin-top: 10px;
     margin-bottom: 90px;
+}
+
+.content .img {
+    width: 88px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #learn figure {
