CSS chagnes for navigation
Changed the margin for card navigation.
- Added shadow for header

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ header {
     position: fixed;
     z-index: 1;
     padding-top: 18px;
+	box-shadow: 0px 5px 15px #888888;
 }
 
 header #top {
@@ -461,6 +462,11 @@ ul.slides {
     padding-bottom: 30px;
 }
 
+.about_online {
+	margin-left:  1.5em;
+	margin-right: 1.5em;
+}
+
 .about_online h1 {
     font-family: 'Arimo', sans-serif;
     font-weight: 700;
@@ -490,6 +496,8 @@ ul.slides {
     float: left;
     margin-top: 50px;
     text-align: center;
+	margin-left:  1.5em;
+	margin-right: 1.5em;
 }
 
 .icons_online .link {
