--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ header nav {
     width: 400px;
     float: right;
     margin-top: 22px;
+	box-shadow: 0px 5px 15px #888888;
 }
 
 header nav ul {
@@ -460,6 +461,12 @@ ul.slides {
     padding-top: 35px;
     padding-bottom: 30px;
 }
+
+.about_online {
+	margin-left:  1.5em;
+	margin-right: 1.5em;
+}
+
 
 .about_online h1 {
     font-family: 'Arimo', sans-serif;
